--- a/langs/en-US.json
+++ b/langs/en-US.json
@@ -3,7 +3,9 @@
   "NX/COLOUR/DROPDOWN/INPUT": "Hex Color",
   "NX/COLOUR/INPUT": "Hex Color",
   "NX/COLOUR/RESET": "Reset Color",
+  "ICONIC/RAND": "Randomizer",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Music Customizer",
+  "COSMETIC/ICON_RANDOMISER/HACK_ICON_RANDOMISER": "Icon Randomizer",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Visualizes level hitboxes, only on death",
   "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Removes all decoration and color from levels",
   "LEVEL/SHOW_HITBOXES/HACK_SHOW_HITBOXES/TIP": "Visualizes level hitboxes",
